--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,16 @@
+@use './variables' as *;
+@use 'vuetify/styles/main.sass';
+@use './override';
+@use './layout/container';
+@use './layout/sidebar';
+@use './layout/topbar';
+@use './components/VButtons';
+@use './components/VCard';
+@use './components/VInput';
+@use './components/VNavigationDrawer';
+@use './components/VShadow';
+@use './components/VTextField';
+@use './pages/dashboards';
+@use './pages/auth';
+
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600&display=swap");
-@import './variables';
-@import 'vuetify/styles/main.sass';
-@import './override';
-@import './layout/container';
-@import './layout/sidebar';
-@import './layout/topbar';
-@import './components/VButtons';
-@import './components/VCard';
-@import './components/VInput';
-@import './components/VNavigationDrawer';
-@import './components/VShadow';
-@import './components/VTextField';
-@import './pages/dashboards';
-@import './pages/auth';
